// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner large 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-valuemax="100"
    aria-valuemin="0"
    class="Spinner-spinner Spinner-spinnerLarge"
    data-component-name="Spinner"
    role="progressbar"
    tabindex="0"
    title="Please wait"
  >
    Loading...
  </div>
</DocumentFragment>
`;

exports[`Spinner medium 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-valuemax="100"
    aria-valuemin="0"
    class="Spinner-spinner Spinner-spinnerMedium"
    data-component-name="Spinner"
    role="progressbar"
    tabindex="0"
    title="Please wait"
  >
    Loading...
  </div>
</DocumentFragment>
`;

exports[`Spinner small 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-valuemax="100"
    aria-valuemin="0"
    class="Spinner-spinner Spinner-spinnerSmall"
    data-component-name="Spinner"
    role="progressbar"
    tabindex="0"
    title="Please wait"
  >
    Loading...
  </div>
</DocumentFragment>
`;

exports[`Spinner with custom class name 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-valuemax="100"
    aria-valuemin="0"
    class="Spinner-spinner testClassName1337 Spinner-spinnerLarge"
    data-component-name="Spinner"
    role="progressbar"
    tabindex="0"
    title="Please wait"
  >
    Loading...
  </div>
</DocumentFragment>
`;

exports[`Spinner with delay 1`] = `<DocumentFragment />`;
